<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_sub_amt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:enabled="false"
            android:focusable="false"
            android:text="@string/split_payment_amount1"
            android:textColor="@android:color/holo_blue_light" />

        <EditText
            android:id="@+id/et_sub_amt_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:inputType="numberDecimal"
            android:maxLines="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_aggregator_charges"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:enabled="false"
            android:focusable="false"
            android:text="@string/split_payment_commission1"
            android:textColor="@android:color/holo_blue_light" />

        <EditText
            android:id="@+id/et_aggregator_charges_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:inputType="numberDecimal"
            android:maxLines="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_child_key"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:enabled="false"
            android:focusable="false"
            android:text="@string/split_payment_child"
            android:textColor="@android:color/holo_blue_light" />

        <EditText
            android:id="@+id/et_child_key_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:maxLines="1" />
    </LinearLayout>




</LinearLayout>